# cpp-json-rpc

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: json.cmake
examples/: CMakeLists.txt  client.cpp  server.cpp
include/: jsonrpc.hpp
include/jrpc/: jrpc.hpp
src/: CMakeLists.txt  jrpc-client.cpp  jrpc-server.cpp
